MyFirstIDEProject/src/objects/Job_Application__c.object
<CustomObject>
    <description>Represents a candidate&apos;s application to a position</description>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <description>Displays Average rating of candidate</description>
        <formula>Total_Rating__c  /  Number_of_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Average rating of candidate</inlineHelpText>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_Id__c</fullName>
        <formula>Interview_Candidate__r.Email__c</formula>
        <label>Candidate Email Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <description>Stores the cover letter submitted by candidate related to the specific job application</description>
        <inlineHelpText>Stores the cover letter submitted by candidate related to the specific job application</inlineHelpText>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the candidate relaated to the job application.</description>
        <inlineHelpText>Displays the candidate relaated to the job application.</inlineHelpText>
        <label>Interview Candidate</label>
        <referenceTo>Interview_Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Job position for which job application is submitted</description>
        <inlineHelpText>Job position for which job application is submitted</inlineHelpText>
        <label>Job Position</label>
        <referenceTo>Job_Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <description>number of reviews received by the candidate</description>
        <inlineHelpText>number of reviews received by the candidate</inlineHelpText>
        <label>Number of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stores the status of a job application</description>
        <inlineHelpText>Stores the status of a job application</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend an Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <description>Dispays total rating as sum of all review ratings of the candidate</description>
        <inlineHelpText>Dispays total rating as sum of all review ratings of the candidate</inlineHelpText>
        <label>Total Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>